src/App.css
body {
  padding-left: 20px;
  padding-top: 30px;
}

.main-cont {
  display: flex;
  flex-direction: row;
  height: 100vh;
}

.navbar {
  border: 1px solid grey;
  border-radius: 3%;
  width: 30%;
  height: 80vh;
  padding-top: 20px;
}

.home {
  width: 68%;
  float: right;
  padding-left: 20px;
}

.image-cont {
  display: flex;
  gap: 5px;
  flex-wrap: wrap;
}

.image {
  width: 100px;
  height: 120px;
  overflow: hidden;
}

.image button {
  border: none;
  padding: 0;
}

.image img {
  width: 100px;
  height: 100px;
  object-fit: cover;
}

.annotation {
  margin: 0;
  padding: 0;
}

.className-list {
  border: 1px solid grey;
  padding: 2px;
  width: 50%;
  border-radius: 5px;
  margin-bottom: 5px;
  margin-right: auto;
  margin-left: auto;
}

.totlalImages {
  position: fixed;
  top: 0;
  right: 30px;
}

.pagination-cont {
  display: flex;
  justify-content: center;
  margin-top: 20px;
  padding: 5px 20px;
}

.pagination {
  background-color: rgba(128, 128, 128, 0.175);
  border: none;
  padding: 2px 6px;
  border-radius: 50%;
  margin-right: 5px;
}

.active {
  background-color: yellow;
}

.popup-section {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #0000008a;
}

.popup {
  position: fixed;
  top: 10%;
  bottom: 10%;
  width: 40%;
  left: 30%;
  margin: auto;
  background-color: #fff;
  padding: 20px;
  border-radius: 20px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  overflow: hidden;
}

.pop-image {
  object-fit: cover;
  width: 100%;
}

.closeBtn {
  float: right;
  background-color: #fff;
  border: none;
  font-size: 2rem;
}

.popup-content {
  clear: right;
}

.image-name {
  background-color: yellow;
  border-radius: 1rem;
  padding: 0.5rem 1rem;
  width: 30%;
  margin-bottom: 15px;
}

